# Financial_Assistant

./: .env.example  .gitignore  CLAUDE.md  ChatHistory.md  README.md  SPEC_FUNNEL.md  SPEC_MAIN.md  SPEC_OUTPUT.md  SPEC_SKILLS.md  pyproject.toml
.claude/skills/analyze-mag7/: SKILL.md
.claude/skills/deep-analysis/: SKILL.md
.claude/skills/scan-market/: SKILL.md
api/: server.py
mcp_servers/: financial_tools.py
scripts/analyzer/: ai_summarizer.py  deep_data_fetcher.py  peer_finder.py  price_chart.py  report_generator.py  run_layer3.py
scripts/scanner/: __main__.py  config.py  data_fetcher.py  metrics_cache.py  results_store.py  run_layer1.py  screener.py  sector_screener.py  universe.py
tests/: test_mcp_server.py
tests/analyzer/: test_ai_summarizer.py  test_deep_data_fetcher.py  test_peer_finder.py  test_price_chart.py  test_report_generator.py  test_run_layer3.py
tests/scanner/: test_config.py  test_data_fetcher.py  test_metrics_cache.py  test_results_store.py  test_screener.py  test_sector_screener.py  test_universe.py
web/: package-lock.json  package.json  vite.config.ts
web/src/: app.css  app.html
web/src/lib/: api.ts  types.ts  utils.ts
web/src/lib/components/: AnalysisTabs.svelte  ChartCanvas.svelte  FinancialChart.svelte  MetricsGrid.svelte  PeerRadar.svelte  PeerTable.svelte  RecommendationBadge.svelte  ScreeningTable.svelte  SectorChart.svelte  StockCard.svelte
web/src/routes/: +layout.svelte  +page.svelte  +page.ts
web/src/routes/screening/: +page.svelte  +page.ts
web/src/routes/stock/[symbol]/: +page.svelte  +page.ts
